Swagger Documentation and formatter code
